--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
     </contributor>
     <contributor>
       <name>Rickard von Essen</name>
+      <email>rickard.von.essen@gmail.com</email>
       <roles>
         <role>Java Developer</role>
       </roles>
@@ -121,7 +122,7 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-project</artifactId>
-      <version>2.2.1</version>
+      <version>${mavenVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -136,7 +137,7 @@
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-archiver</artifactId>
-      <version>2.3</version>
+      <version>2.1.2</version>
     </dependency>
     
     <dependency>
@@ -157,13 +158,12 @@
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-utils</artifactId>
-      <version>${mavenVersion}</version>
+      <version>3.0.4</version>
     </dependency>
-
   </dependencies>
 
   <properties>
-    <mavenVersion>3.0.5</mavenVersion>
+    <mavenVersion>2.2.1</mavenVersion>
   </properties>
 
   <build>
